# agrinote-scraper-for-lambda

./: .dockerignore  .gitignore  README.md  build.sh  pyproject.toml
docker/: Dockerfile
src/: app_scraper.py  app_slack.py
src/core/: browser.py  formatter.py  scraper.py  writer.py
src/utils/: error.py  logger.py
tests/: test_browser.py  test_formatter.py  test_scraper.py  test_scraper_handler.py  test_slack.py  test_writer.py
